# abraxus

./: ,pre-commit-config.yaml  .bashrc  .gitignore  .pdm-python  2024-11-08.md  BotSpec.md  CMakeLists.txt  LICENSE  MSC.abraxus.md  QSD.py  README.md  README.old.md  READMENEW.md  ROBOTS.md  Untitled.md  __init__.py  actionatom.py  amain.py  app.py  baseapp.py  bmain.py  colormemory.py  commands.txt  contin.py  delmain.py  dksagency.py  docker-compose.yml  init__.py  m1.py  main.py  makefile  mapnibbler.py  master.py  mercolor2.py  merkfile.py  merkle_tree_snapshot.txt  merklerkler.py  morphobase.py  newbip.py  newmain.py  (+15 more)
.devcontainer/: .bashrc  devcontainer.json  docker-compose-override.yml  orchestration.rkt  setup.ps1  setup.sh
.github/: install_hooks.sh
.github/workflows/: cicd.yml  python-app.yaml
.obsidian/: app.json  appearance.json  community-plugins.json  workspace.json  zk-prefixer.json
.obsidian/plugins/advanced-canvas/: main.js
.obsidian/plugins/local-gpt/: main.js
.obsidian/plugins/obsidian-excalidraw-plugin/: manifest.json
.platdist/: boxy.bat  cfg.wsb  config.json  explorer_patcher.ps1  get_obsidison.ps1  invoke_setup.bat  obsid_is_on.ps1  obsid_is_on.py  provisioner.bat  sandbox_config.wsb  scoop.ps1  scoop_setup.ps1  vscode_config.ps1
.platdist/.dep/: scoop.bat  smbrdp_cmd.ps1  smbrdp_deploy.ps1
.smart-env/multi/: Cubical_Type_Theory_md.ajson  KnowEidt_md.ajson  Local_Rest_API_for_Obsidian_Interactive_API_Documentation_md.ajson  Local_Rest_API_md.ajson  MSC_abraxus_md.ajson  Martin-Löf_Type_Theory_md.ajson  README_md.ajson  Untitled_md.ajson  app_README_md.ajson  cogn_md.ajson  components_md.ajson  dependent_types_md.ajson  derivative_md.ajson  illocutionary_md.ajson  kb_Abraxus_md.ajson  kb_KnowledgeBASE___temp__BotSpec_md.ajson  kb_KnowledgeBASE___temp__RAG_md.ajson  kb_KnowledgeBASE___temp__RLHF_md.ajson  kb_KnowledgeBASE_logic___temp__Cubical_Type_Theory_md.ajson  kb_KnowledgeBASE_logic___temp__Homotopy_Type_Theory_md.ajson  kb_KnowledgeBASE_logic___temp__Martin-Löf_Type_Theory_md.ajson  kb_KnowledgeBASE_logic___temp__Speech_Act_Theory_md.ajson  kb_KnowledgeBASE_logic___temp__Theorem_prover_md.ajson  kb_KnowledgeBASE_logic___temp__dependent_types_md.ajson  kb_KnowledgeBASE_logic___temp__illocutionary_md.ajson  kb_KnowledgeBASE_logic___temp__locutionary_md.ajson  kb_KnowledgeBASE_logic___temp__perlocutionary_md.ajson  kb_KnowledgeBASE_math___temp__Frobenius_Decomposition_md.ajson  kb_KnowledgeBASE_math___temp__Grothendieck_topos_md.ajson  kb_KnowledgeBASE_math___temp__operad_md.ajson  kb_KnowledgeBASE_math___temp__stacks_project_md.ajson  kb_KnowledgeBASE_programming___temp__Building_MCP_clients-Python_md.ajson  kb_KnowledgeBASE_programming___temp__Defining_PHP_Constants_That_Collapse_When_Observed_md.ajson  kb_KnowledgeBASE_programming___temp__glob_md.ajson  kb_KnowledgeBASE_programming_machine_learning___temp__GGUF_md.ajson  kb_KnowledgeBase_Born_Rule_md.ajson  kb_KnowledgeBase_BotSpec_md.ajson  kb_KnowledgeBase_Morphological_Source_Code_md.ajson  kb_KnowledgeBase_Operators_md.ajson  kb_KnowledgeBase_RAG_md.ajson  (+83 more)
Excalidraw/: Drawing 2025-05-07 01.10.39.excalidraw.md
app/: QSD.py  README.md  __init__.py  abs.py  atom.py  boostrap.py  code.app.py  conc.py  dcmain.py  dynamic_dataclass.py  emaroh.py  gengen.py  kmro.py  main.py  mid.py  middleware.py  morphic.py  mro.py  mroenfo.py  ologic.py  piQkernel.py  qduce.py
app/ezfs/: benchmark.py  corotypes.py  fsysspace.py  morphofs.py
app/source/: scoop.ps1  sys1.rkt  target.py
app/src/: cffi.py  computor.py  dcmain.py  eventdrive.py  lognosis.py  merkcolor.py  newqlex.py  nowtestingsomething2.py  qtoke.py  replermerkler.py  shortmerkle.py  shotermerkler.py  something2test.py  somethingelse2.py
app/src/app/: __init__.py
app/src/typeclass/: tc.py
app/src/utils/: cleanup.py
docs/: README.md  RFC Halting Situation.md  install.md
kb/assets/pub/: Abraxus.md  on cosmological thermodynamic character.md
platform/: README.md  defer_setup.ps1  ibus_pinyin.sh  provisioner.bat  sandbox_config.wsb  scoop_setup.ps1
platform/.dep/: README.md  boxy.bat  cfg.wsb  ep.bat  scooper.bat  vscode_install.bat  vstudio.ps1
src/: AlgernonsQuest.py  __init__.py  algernons_quest.py  altlog.py  analysis.py  app.py  applogic.py  atom.py  basiccomplexunitcircle.py  basicentangle.py  bloch.py  bwtestpy.py  cptest.py.py  ctest.py  curry.py  delmain.py  intro.py  logic.py  main.app..py  main.py  mixin.py  morphobase.py  newbip.py  newlog.py  noxfile.py  ops.py  papp.py  platfac.py  probability_bits.py  pyproject.toml  stablequine.py  topmods.py  turing_tape.py  units.py
src/app/: __init__.py  abstracts.py  app.py  base.py  code.app.py  ctest.py  dagency.py  emaroh.py  fstate2.py  lognosis.py  msc.py  ollama.py  wolfenstein.py
src/app/complex/: CMakeLists.txt  README.md  docker-compose.yml  dockerfile  dynamic_module.py  fdyn.py  main.py  memtrackerabc.py  msc.py  paulitest.py  reactor.js  ritual.py  sys.rkt  terse_fields.py  terse_noetherian.py  topinit.py
src/app/ezfs/: benchmark.py  cntnt.py  dcmain.py  morphofs.py  morphostest.py  nspace.py  platfac.py
src/bench/: bench.py
src/qubit/: bloch.py  complement.py  probability_bits.py  ruler.py  total_energy.py
src/simple/: cntnt.py  nspace.py
src/typeclass/: hg.py
virtual_folder/: my_file.json  my_file.md
working/: README.md  dividezero.py  dontdivzero.py  ifthisrunsima.py  igottatest.py  mrot1.py  mrot2.py  mrot3.py  mrot_H2H.md  nozeronothere.py  pew2.py  pew3.py  protoc.py  qbridge.py  qbridge_theory.md  qdecorate.py  skimax.py  spack.py  timeslice.py  tstore.py  zerzeroo.py
